[project]
name = "agent-sdk"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "abdulrehman104", email = "abdulrehman104+abdulrehman104@users.noreply.github.com" }
]
requires-python = ">=3.13"
dependencies = [
    "chainlit>=2.5.5",
    "openai-agents[litellm]>=0.0.16",
]

[project.scripts]
agent-sdk = "agent_sdk:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
