[project]
name = "agent-sdk-guide"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "abdulrehman104", email = "abdulrehman104+abdulrehman104@users.noreply.github.com" }
]
requires-python = ">=3.13"
dependencies = [
    "openai-agents>=0.0.19",
]

[project.scripts]
guide = "agent_sdk_guide:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
